# vifu

./: .dockerignore  .envrc  .envrc.local.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  plan.md  pyproject.toml  run.sh
.github/workflows/: ci.yml  deploy.yml
assets/sounds/: SOURCES.md
bot/: .env.example  DEPLOY.md  README.md  deno.jsonc
bot/src/: admin.ts  bot.ts  config.ts  health.ts  main.ts  queue.ts  queueStore.ts  renderJob.ts  sentry.ts  session.ts  video.ts  vifu.ts
bot/tests/: queue.test.ts  queueStore.test.ts
configs/styles/: arcade_fight.yaml
src/tt_overlay/: __init__.py  __main__.py  audio.py  cli.py  health.py  overlay.py  pipeline.py
src/vifu/: __init__.py  __main__.py  audio.py  cli.py  health.py  layout.py  overlay.py  pipeline.py  styles.py  video_io.py
tests/: test_audio.py  test_health.py  test_layout.py  test_styles.py  test_video_io.py
