[project]
name = "vifu"
version = "0.1.0"
description = "vifu (video fun): local CLI for arcade-style sport competition video overlays"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "opencv-python>=4.9.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
tracking = [
    "ultralytics>=8.3.0",
]
audio = [
    "scipy>=1.12.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
vifu = "vifu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vifu"]

[tool.hatch.build.targets.sdist]
include = ["src/vifu", "configs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
